RESOLVED FIXED152079
AX: [EFL] Anonymous render block flow elements should be exposed as ATK_ROLE_SECTION; not ATK_ROLE_PANEL
https://bugs.webkit.org/show_bug.cgi?id=152079
Summary AX: [EFL] Anonymous render block flow elements should be exposed as ATK_ROLE_...
Joanmarie Diggs
Reported 2015-12-09 10:46:07 PST
This is the EFL version of bug 152070.
Attachments
Patch (7.73 KB, patch)
2015-12-09 10:54 PST, Joanmarie Diggs
no flags
Patch (7.70 KB, patch)
2015-12-09 23:16 PST, Joanmarie Diggs
no flags
Radar WebKit Bug Importer
Comment 1 2015-12-09 10:46:32 PST
Joanmarie Diggs
Comment 2 2015-12-09 10:54:06 PST
WebKit Commit Bot
Comment 3 2015-12-09 10:55:17 PST
Attachment 267024 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joanmarie Diggs
Comment 4 2015-12-09 23:16:27 PST
Gyuyoung Kim
Comment 5 2015-12-13 05:23:45 PST
Comment on attachment 267074 [details] Patch cq=me.
WebKit Commit Bot
Comment 6 2015-12-13 06:08:05 PST
Comment on attachment 267074 [details] Patch Clearing flags on attachment: 267074 Committed r194015: <http://trac.webkit.org/changeset/194015>
WebKit Commit Bot
Comment 7 2015-12-13 06:08:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.