AX: [EFL] Anonymous render block flow elements should be exposed as ATK_ROLE_SECTION; not ATK_ROLE_PANEL https://bugs.webkit.org/show_bug.cgi?id=152079

Reviewed by Chris Fleizach.

Source/WebCore:

Map the element to WebCore AccessibilityRole DivRole for EFL. As with GTK, this
is being done in the shared layer rather than in the platform layer because we
want all subsequent logic to treat anonymous render block flow elements as divs.

No new tests. We already have sufficient test coverage. The expectations
been updated accordingly.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::determineAccessibilityRole):

LayoutTests:

* platform/efl/accessibility/deleting-iframe-destroys-axcache-expected.txt: Added.
* platform/efl/accessibility/image-link-expected.txt: Updated.
* platform/efl/accessibility/image-with-alt-and-map-expected.txt: Updated.
* platform/efl/accessibility/lists-expected.txt: Updated.
* platform/efl/accessibility/media-element-expected.txt: Updated


Canonical link: https://commits.webkit.org/170341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194015 268f45cc-cd09-0410-ab3c-d52691b4dbfc